calculos de medias y agrupaciones de datos por intervalos
